--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ group = 'jp.natsukishina.orm4j8'
 archivesBaseName = 'orm4j8'
 version = '1.0.0'
 
+task sourcesJar(type: Jar, dependsOn:classes) {
+     classifier = 'sources'
+     from sourceSets.main.allSource
+}
+
 task javadocJar(type: Jar, dependsOn:javadoc) {
 	classifier = 'javadoc'
 	from javadoc.destinationDir
@@ -32,6 +37,7 @@ task javadocJar(type: Jar, dependsOn:javadoc) {
 }
 
 artifacts {
+	archives sourcesJar
 	archives javadocJar
 }
 
